--- a/index.css
+++ b/index.css
@@ -1,17 +1,72 @@
-#main {
-  background-color: black;
-  border-radius: 50%;
-  height: 800px;
-  width: 800px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+#maincontain {
+  /* align-items: center;  */
   display: grid;
+  width: 700px;
+  height: 700px;
+  border-radius: 50%;
+  margin: auto;
+  background-color: black;
+  border: 30px solid rgb(0, 0, 0);
   grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
+  overflow: hidden;
+  position: relative;
   gap: 20px;
+  box-shadow: 1px 5px 5px 5px rgb(115, 115, 121);
 }
 .block {
+  background-color: red;
+}
+#midCircle {
   position: absolute;
-  background-color: white;
-  height: 400px;
-  width: 400px;
+  top: 30%;
+  left: 30%;
+  border-radius: 50%;
+  border: 20px solid black;
   background-color: aqua;
+  z-index: 100;
+  width: 250px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+}
+#midCircle_garchig {
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+#midCircle_dund {
+  width: 100px;
+  height: 30px;
+  border-radius: 20px;
+}
+#midCircle_dood {
+  width: 45px;
+  height: 45px;
+  background-color: black;
+}
+#right-top {
+  background-color: blue;
+}
+#left-top {
+  background-color: red;
+}
+#right-bottom {
+  background-color: yellow;
+}
+#left-bottom {
+  background-color: green;
+}
+@keyframes ajillah {
+  from {
+    background-color: blue;
+  }
+  to {
+    background-color: yellow;
+  }
 }
