--- a/index.css
+++ b/index.css
@@ -48,7 +48,11 @@
 #midCircle_dood {
   width: 45px;
   height: 45px;
-  background-color: black;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
 }
 #right-top {
   background-color: blue;
